feat(memory): V34 home+可见性混合 scope，修同 key 跨项目撞墙
V33 纯可见性标签模型下唯一索引仍 (user_id,memory_key) scope-orthogonal，
dedup 却 scope-filtered → global 已有 child_name 时切项目再加同 key 撞
uk_user_memories_user_key_clean 报「记忆写入失败」。

改混合模型：home_project_id 作写归属/唯一性槽（分区语义），is_global+
user_memory_projects 管读可见性（共享语义），两者正交。
- 加 home_project_id 列 + 换唯一索引 (user_id,memory_key,COALESCE(home_project_id,-1)) WHERE conflict_id IS NULL
- 回填：project 行从 user_memory_projects 取 MIN project 作 home
- findCleanByHomeKey home-aware dedup（取代 scope-filtered），3 调用点全换
- createFlagged 冲突行也设 home（resolve 后 survivor 不撞约束）
- 读路径/可见性标签/共享端点不动（读仍按开关全注入）

每项目独立 child_name + 跨项目共享并存。mock 单测 317/317，IT 20/20，
浏览器冒烟 3-home 共存零撞墙。